# ALS-API

./: Cargo.toml  README.md  package-lock.json
.github/workflows/: main.yml
src/: lib.rs  main.rs
src/enums/: difficulty.rs
src/helpers/: topic_conversion.rs
src/middleware/: auth.rs
src/services/: database.rs  knowledge_service.rs  mod.rs  question_service.rs
src/services/database/: account.rs  jwt.rs  knowledge_service.rs  mod.rs  question_service.rs
src/services/generator/: modules.rs
src/structs/: account.rs  claims.rs  knowledge_score_request.rs  knowledge_score_update.rs  mod.rs  module_list.rs  performance_update.rs  question_pair.rs  sign_in.rs  skill_progression.rs  token_validation.rs
