[package]
name = "ALS-API"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }


[[bin]]
name = "kt"
path = "./src/bin/main_kt.rs"

[[bin]]
name = "question"
path = "./src/bin/main_question.rs"

[profile.release]
opt-level = 3     
lto = true         
codegen-units = 1 

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-linux-gnu-gcc"
