[package]
name = "als_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
postgres = "0.19.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full", "macros", "rt-multi-thread"] }
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }


[[bin]]
name = "kt"
path = "./src/bin/main_kt.rs"

[[bin]]
name = "question"
path = "./src/bin/main_question.rs"

[profile.release]
opt-level = 3     
lto = true         
codegen-units = 1 


